# URLShortenerBot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/client/: __init__.py  bit_client.py  cleanuri_client.py  http_client.py  isgd_client.py  relink_client.py  vk_client.py  yandex_click_client.py
app/filters/: inline_filter.py  regex_filter.py
app/handlers/: __init__.py  callbacks.py  inlines.py  messages.py
app/middlewares/: __init__.py  client_middleware.py  i18n.py
app/utils/: shortener.py
url_shortener/: config.py  main.py
url_shortener/client/: __init__.py  bit_client.py  cleanuri_client.py  http_client.py  isgd_client.py  relink_client.py  vk_client.py  yandex_click_client.py
url_shortener/filters/: __init__.py  inline_filter.py  regex_filter.py
url_shortener/handlers/: __init__.py  callbacks.py  inlines.py  messages.py
url_shortener/locales/: mybot.pot
url_shortener/locales/en/LC_MESSAGES/: mybot.po
url_shortener/locales/ru/LC_MESSAGES/: mybot.po
url_shortener/middlewares/: __init__.py  client_middleware.py  i18n.py
url_shortener/utils/: __init__.py  keyboards.py  shortener.py
