[tool.poetry]
name = "url_shortener"
version = "1.0.0"
description = "Bot for shortening links"
authors = ["Vlad <kuklavudu78@gmail.com>"]
license = "MIT"

repository = "https://github.com/Divaltor/URLShortenerBot"
homepage = "https://github.com/Divaltor/URLShortenerBot"

keywords = ["shortener", "url", "bot", "vk", "bitly"]

[tool.poetry.dependencies]
python = "^3.6"
aiogram = "^2.6.1"
httpx = "^0.12.1"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
