[tool.poetry]
name = "url_shortener"
version = "2.1.0"
description = "Bot for shortening links"
authors = ["Vlad <kuklavudu78@gmail.com>"]
license = "MIT"

repository = "https://github.com/Divaltor/URLShortenerBot"
homepage = "https://github.com/Divaltor/URLShortenerBot"

keywords = ["shortener", "url", "bot", "vk", "bitly"]

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.6.1"
httpx = "^0.12.1"
loguru = "^0.4.1"
aioredis = "^1.3.1"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]
Babel = "^2.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
